<resources>
    <string name="app_name">Markdownald</string>

    <string name="all_type_hint">Please type here</string>
    <string name="all_note_name">Note Name</string>
    <string name="all_notebook_name">Notebook Name</string>

    <string name="all_create">Create</string>
    <string name="all_create_note">Create New Note</string>
    <string name="all_create_notebook">Create New Notebook</string>

    <string name="all_rename">Rename</string>
    <string name="all_rename_note">Rename The Note</string>
    <string name="all_rename_notebook">Rename The Notebook</string>

    <string name="all_move">Move</string>
    <string name="all_move_note">Move The Note</string>

    <string name="all_preview">Preview</string>

    <string name="all_cancel">Cancel</string>

    <string name="all_sync">Sync</string>

    <string name="main_more">More</string>
    <string name="main_delete">Delete</string>

    <string name="title_activity_node_qr">NodeQRActivity</string>

    <string name="all_setting">setting</string>
    <string name="all_login">Login</string>
    <string name="all_open">Open</string>
    <string name="all_close">Close</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="all_register">Register</string>
    <string name="all_email">Email</string>
    <string name="all_username">Username</string>
    <string name="all_userId">UserID</string>
    <string name="all_password">Password</string>
    <string name="all_scan">Scan note QR</string>
    <string name="all_please_login">PLEASE LOGIN</string>
    <string name="all_tutorial">Tutorial</string>
    <string name="all_about">About</string>
    <string name="all_share">Share</string>
    <string name="all_logout">Logout</string>

</resources>
