<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_customized"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:textColorHint="@color/colorLightBlue"
        android:theme="@style/MyEditText"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_login_userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_userId"
            android:inputType="textPersonName"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="@color/colorLightBlue"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_password"
            android:inputType="textPassword"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-10dp"
        android:text="@string/all_login" />

</LinearLayout>